# pyml

./: .gitignore  README.md  pyml.py  pyproject.toml  requirements.txt  test.py  test1.pym  test_macros.py  test_macros.pyxp
examples/tic_tac_toe/: README.md  __init__.py  index.pyxp  pages.py  routes.py
examples/tic_tac_toe/static/: index.css  minimax.js  minmax.js
examples/tic_tac_toe/views/: index.pyxp
expan/: __init__.py  error.py  importer.py  main.py  preprocessor.py
pyml/: __init__.py  activate.py  ast.py  component.py  elements.py  expander.py  macros.py  parsing.py  scaffold.py
tests/: run_tests.py  test.py  test_errors.py  test_pysx.py  test_pysx.pyxp
tests/macros/: badelement.pyxp  badscaffold.pyxp
tests/pages/: test_elements.html
