[tool.poetry]
name = "pyml3"
version = "0.1.0"
description = "Library for generating HTML through the use of syntactic macros in python"
authors = ["stackswithans <stexor12@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pyml" },
    { include = "expan" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyparsing = {version = "^3.1.1"}
termcolor = "2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jinja2 = "^3.1.2"
lxml = "^4.9.3"
pyright = "^1.1.334"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
